<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateForumFragment"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/forumTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/forumTitleHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/forumDescriptionHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/forumTitleEditText"
        app:layout_constraintStart_toStartOf="@+id/forumTitleEditText"
        app:layout_constraintTop_toBottomOf="@+id/forumTitleEditText" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submitLabel"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEditText"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/cancelLabel"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmit"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>